codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_unix_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.0 -> 9.9.9                                                                        │
│ Run sh -c 'curl -fsSL https://github.com/Lemmy00/lemex/raw/main/scripts/install/install.sh |               │
│ LEMEX_NON_INTERACTIVE=1 sh' to update.                                                                     │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/Lemmy00/lemex/releases/latest                                                           │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
